# obs-agent

./: .gitignore  LICENSE  README.md  agent.py  app.py  data.py  evals.py  pyproject.toml  requirements.txt  tools.py
.github/workflows/: ci.yml
tests/: conftest.py  test_agent.py  test_evals.py  test_tools.py
