[project]
name = "obs-agent"
version = "0.1.0"
description = "Multi-cloud cost triage agent with LLM tool-use"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.50.0",
    "openai>=1.0.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that call live LLM APIs (require API keys)",
]
